# KiloElfLoader

./: .clang-tidy  CMakeLists.txt  README.md  symgen.py
examples/: kbelfx_libc.c
include/: kbelf.h
include/kbelf/: config.h  elfspec.h  machine.h  port.h  reloc.h  string.h  types.h
src/: kbelf.c  kbelf_dyn.c  kbelf_file.c  kbelf_inst.c  kbelf_reloc.c  kbelf_string.c
src/port/: riscv.c  x86.c
